--- a/index.html
+++ b/index.html
@@ -12,37 +12,61 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      overflow: hidden;
     }
-
     .video-container {
       position: relative;
       max-width: 800px;
       width: 100%;
+      cursor: none;
     }
-
     video {
       width: 100%;
       display: block;
+      background: black;
+    }
+    /* Intro Play Button */
+    .intro-play {
+      position: absolute;
+      width: 150px;
+      height: 150px;
+      background: url('gervais.png') no-repeat center/contain;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      z-index: 10;
+    }
+    .intro-play.clicked {
+      animation: shrink-bounce 0.4s forwards;
+    }
+    @keyframes shrink-bounce {
+      0% { transform: translate(-50%, -50%) scale(1); }
+      50% { transform: translate(-50%, -50%) scale(0.6); }
+      100% { transform: translate(-50%, -50%) scale(0); opacity: 0; }
     }
 
+    /* Controls style */
     .controls {
       position: absolute;
       bottom: 0;
       left: 0;
       right: 0;
-      background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+      background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0,0,0,0));
       padding: 10px;
       opacity: 0;
       transition: opacity 0.3s ease;
       display: flex;
       flex-direction: column;
       gap: 5px;
+      pointer-events: none;
+      user-select: none;
     }
-
     .controls.visible {
       opacity: 1;
+      pointer-events: auto;
     }
-
     .progress-bar {
       width: 100%;
       height: 5px;
@@ -50,54 +74,47 @@
       cursor: pointer;
       position: relative;
     }
-
     .progress {
       height: 100%;
       background: red;
       width: 0%;
     }
-
     .progress-dot {
-  width: 12px;
-  height: 12px;
-  background: url('point.png') no-repeat center/contain;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translate(-50%, -50%);
-}
-
+      width: 12px;
+      height: 12px;
+      background: url('point.png') no-repeat center/contain;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translate(-50%, -50%);
+    }
     .control-buttons {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-
     .left-controls,
     .right-controls {
       display: flex;
       align-items: center;
       gap: 10px;
     }
-
     .control-buttons img {
       width: 24px;
       height: 24px;
       cursor: pointer;
     }
-
     .time {
       color: white;
       font-family: monospace;
       font-size: 14px;
+      user-select: none;
     }
-
     .volume-container {
       display: flex;
       align-items: center;
       gap: 5px;
     }
-
     .volume-bar {
       width: 80px;
       height: 5px;
@@ -105,13 +122,11 @@
       cursor: pointer;
       position: relative;
     }
-
     .volume-fill {
       height: 100%;
       background: white;
       width: 100%;
     }
-
     .hide-cursor {
       cursor: none;
     }
