--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
       background: white;
       width: 100%;
     }
+    .hide-cursor {
+      cursor: none;
+    }
   </style>
 </head>
 <body>
